--- a/curso/projeto03(Receita de bolo)/estilo.css
+++ b/curso/projeto03(Receita de bolo)/estilo.css
@@ -1,12 +1,27 @@
+body{
+    background-color:rgb(255, 249, 161);
+}
 div{
+    width: 600px;
+    margin: 10px auto;
     font-family: Verdana;
-    background-color: rgb(235, 191, 126);
+    border-radius: 10px 30px 10px 30px ;
+    border: #ffffff;
+    background-color: #f4d558;
+    padding: 30px 15px 30px 15px;
+    
 }
 
 h1{
     color: red;
-    text-align: center;
-    font-size: 24px;
+    
+    font-size: 30px;
+    background-color: #fff3c4;
+    padding: 10px 25px 10px 25px;
+    border-radius: 16px 25px 25px 0px;
+    margin-top: 15px;
+    border-left: 10px solid red;
+   
 }
 
 h2{
@@ -16,6 +31,7 @@ h2{
     font-weight: normal;
     font-style: italic;
     text-decoration: underline;
+    margin: 30px;
 }
 h3{
     font-size: 18px;
@@ -28,13 +44,14 @@ h4{
     
 }
 p{
-    font-size: 12px;
+    font-size: 15px;
+    text-align: justify;
     color: rgb(80, 78, 78);
 }
 ol{
-    font-size: 12px;
-    color: gray;
-    line-height: 20px;
+    font-size: 15px;
+    color: rgb(100, 98, 98);
+    line-height: 30px;
 }
 img{
     width: 100%;
